--- a/package.json
+++ b/package.json
@@ -15,12 +15,15 @@
     "@types/node": "^16.7.13",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
+    "classnames": "^2.3.2",
     "cookie": "^0.5.0",
     "formik": "^2.2.9",
+    "framer-motion": "^7.5.3",
     "mobx": "^6.6.1",
     "mobx-react": "^7.5.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-image-zooom": "^1.0.4",
     "react-nl2br": "^1.0.4",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
